Fixed unwrapped codes

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,10 +63,6 @@
 
 /* Custom CSS */
 
-pre {
-  white-space: pre;
-}
-
 pre code {
   padding: 0;
   background: initial;
